--- a/vgh_django/frontend/templates/base.html
+++ b/vgh_django/frontend/templates/base.html
@@ -5,33 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centro VGH</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/base.css">
+    <!-- <link rel="stylesheet" href="../static/css/base.css"> -->
 </head>
 <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navbar navbar-expand-lg navbar-light bg-dark sticky-top ">
         <!-- Logo -->
         <figure class="navbar-brand">
             <img src="https://placehold.co/100x100" alt="Logo" width="100" height="100">
         </figure>
         <!-- Title -->
-        <h1 class="navbar-brand">Centro de Victor Garcia Hoz</h1>
+        <h1 class="navbar-brand text-white">Centro de Victor Garcia Hoz</h1>
     
-        <!-- Right-aligned buttons -->
         <div class="ml-auto">
             <div>
-                <p href="#" class="navbar-text mr-3">Welcome, Name</p>
+                <p href="#" class="navbar-text mr-3 text-white">Bienvenidos, Name</p>
                 <button class="btn btn-primary">Sign Out</button>
             </div>
             <div class="btn-group">
-                <button class="btn btn-secondary">Mis Clases</button>
+                <button class="btn btn-secondary" onclick="window.location.href = 'http://127.0.0.1:8000/dashboard/profesor/'">Mis Clases</button>
             </div>
         </div>
     </header>
     {% block content %}
 
     {% endblock %}
-    <footer class="footer bg-light text-center py-3 fixed-bottom">
-        <p class="mb-0">&copy; 2023 McKay Thomas. All rights reserved</p>
+    <footer class="footer bg-dark text-center py-3 fixed-bottom">
+        <p class="mb-0 text-white ">&copy; 2023 McKay Thomas. All rights reserved</p>
     </footer>
     {% block javascript %}{% endblock %}   
 </body>
