Finish read ne and clean file strutc

--- a/vgh_django/frontend/templates/profesor-dashboard.html
+++ b/vgh_django/frontend/templates/profesor-dashboard.html
@@ -4,7 +4,7 @@
 {% block content %}
 <main>
     <div id="table-title-container" class="justify-content-around  align-items-center">
-        <h2 class="text-center mt-3">Tus Clases</h2>
+        <h2 class="text-center mt-3">Mis Clases</h2>
         <div class="d-flex align-items-center mt-3" id="button-container">
         </div>
     </div>
