--- a/vgh_django/frontend/templates/base.html
+++ b/vgh_django/frontend/templates/base.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centro VGH</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../static/css/base.css"> -->
 </head>
 <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-dark sticky-top ">
+    <header class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
         <!-- Logo -->
-        <figure class="navbar-brand">
+        <figure class="navbar-brand mt-2">
             <img src="https://placehold.co/100x100" alt="Logo" width="100" height="100">
         </figure>
         <!-- Title -->
-        <h1 class="navbar-brand text-white">Centro de Victor Garcia Hoz</h1>
+        <h1 class="navbar-brand text-white">Centro del Colegio</h1>
     
         <div class="ml-auto">
-            <div>
-                <p href="#" class="navbar-text mr-3 text-white">Bienvenidos, Name</p>
-                <button class="btn btn-primary">Sign Out</button>
+            <div class="d-flex justify-content-between align-items-center">
+                <p href="#" class="navbar-text text-white">Bienvenidos, Name</p>
+                <button class="btn btn-primary mb-3">Sign Out</button>
             </div>
-            <div class="btn-group">
+            <div class="btn-group ml-auto">
+                <button class="btn btn-secondary" onclick="window.location.href = 'http://127.0.0.1:8000/dashboard/director/'">Mi Direccion</button>
+                <button class="btn btn-secondary" onclick="window.location.href = 'http://127.0.0.1:8000/dashboard/tutor/'">Mi Tutoria</button>
                 <button class="btn btn-secondary" onclick="window.location.href = 'http://127.0.0.1:8000/dashboard/profesor/'">Mis Clases</button>
             </div>
         </div>
